--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-  background: url(/wbBlink101/images/charcoalbkg.jpg) no-repeat center center fixed;
+  background: url(jiwan2ne1.github.io/images/charcoalbkg.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
